Fix John's portrait on Safari

--- a/client/app/styles/main.css
+++ b/client/app/styles/main.css
@@ -7251,7 +7251,7 @@ body p {
     top: 135px;
     left: 50%;
     width: 300px;
-    height: 40px;
+    height: 0;
     margin-left: -150px;
     background-image: url("/images/logo-text-small.svg");
     background-position: center top;
@@ -7309,7 +7309,7 @@ body p {
   margin-top: 2px;
   margin-left: 8px;
   background-image: url("/images/meet-john.jpg");
-  background-position: center top -3px;
+  background-position: center -3px;
   background-repeat: no-repeat;
   background-size: auto 131px;
   border-color: rgba(255, 255, 255, 0.9);
