--- a/client/app/styles/navbar.less
+++ b/client/app/styles/navbar.less
@@ -60,7 +60,7 @@
       left: 50%;
       margin-left: -@brand-logo-text-small-width / 2;
       width: @brand-logo-text-small-width;
-      height: 40px;
+      height: 0px;
       background-image: url("/images/logo-text-small.svg");
       background-repeat: no-repeat;
       background-position: center top;
@@ -128,7 +128,7 @@
         padding: 90px 0px 0px 0px;
         background-image: url("/images/meet-john.jpg");
         background-repeat: no-repeat;
-        background-position: center top -3px;
+        background-position: center -3px;
         background-size: auto 131px;
         border-width: 0px;
         border-style: solid;
